--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
                 <li>独自负责用flutter进行相关马甲包开发，对一些技术的探索，以及基础库的封装，如请求库，列表，上传七牛云，选择图片，toast，弹出评论框等等。
                   主要模块有登录注册，动态列表，图书馆，阅读闯关，我的，webview内嵌h5的微博详情页等。
                 </li>
+                <li>项目地址：<a href="https://vitaminaq.cn/download/app/">
+                  https://vitaminaq.cn/download/app/</a></li>
               </ol>
             </li>
           </ul>
@@ -167,7 +169,7 @@
         </div>
         <div class="other-mes">
           <div class="other-mes-header">
-            <span class="header-first">2019.06 - 2019.10</span>
+            <span class="header-first">2019.06 - 2020.9</span>
             <span class="header-middle"></span>
             <span class="header-last">web前端</span>
           </div>
@@ -186,9 +188,13 @@
               <li>vue-pupop-toast：包括confirm，alert，loading，toast等常见的ui插件，支持ts，以及ts提示。<a
                   href="https://www.npmjs.com/package/vue-pupop-toast">https://www.npmjs.com/package/vue-pupop-toast</a>
               </li>
+              <li>vue-audios：一款简易的音频播放+管理器。<a
+                href="https://www.npmjs.com/package/vue-audios">https://www.npmjs.com/package/vue-audios</a>
+              </li>
             </ul>
             <ul class="practice-steep-two">
-              <li>学习flutter</li>
+              <li>学习flutter：<a href="https://github.com/Vitaminaq/flutter-cfsw">
+                https://github.com/Vitaminaq/flutter-cfsw</a></li>
             </ul>
             <ul class="practice-steep-two">
               <li>平时会利用老项目的一些页面做一些技术实践，后台node也采用了node+mysql重构。</li>
