--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <ul class="practice-steep">
               <li>目的：对之前实习所学知识的再实践，主要包括vue，代码封装，实践node知识，以及服务器搭建</li>
               <li>类似于论坛的app。</li>
-              <li>主要用了：vue，nodejs，nginx，mongodb等。(浅层知识))</li>
+              <li>主要用了：vue，nodejs，nginx，mongodb等。</li>
               <li>主要步骤：前期的分析和构建，脚手架的熟悉，项目的搭建，跨域配置，本地以及云服务器的搭建和部署。</li>
               <li>感受：初步爬坑，一个问题可以卡到怀疑人生，幸好还是解决了。</li>
             </ul>
