--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
               <ol class="child-ul">
                 <li>开源社区比较早期的使用vite+vue3.0去做服务端渲染的项目，通过url带参控制当前页面是否需要服务端预期数据，其他优化同上家方案。</li>
                 <li>利用vite特性做项目模块化和store按需注册，编写h5与原生以及小程序底层交互逻辑，利用hash特性，做到小程序端webview无刷新同步信息。</li>
+                <li>基于vite封装公司内部ssr脚手架nxxt。</li>
                 <li>编写腾讯云ssr函数，支持一键部署腾讯云，用于短信链接直接打开小程序。</li>
                 <li>项目地址：应用商城下载《超能海豹》或直接访问<a
                     href="https://h5-hybrid.kuaibaobao.com/welfare-active-bargain/bargain-home">
